fix: update HMAC secret in development environment and enhance table scrollbar styling

--- a/app/blog-content.css
+++ b/app/blog-content.css
@@ -57,6 +57,7 @@
 
   .blog-content table::-webkit-scrollbar-thumb {
     @apply bg-secondary-400;
+
     border-radius: 9999px;
   }
 
@@ -321,9 +322,8 @@
       position: sticky;
       right: 0;
       top: 0;
-      float: right;
       width: 2rem;
-      height: 100%;
+      height: 100dvh;
       margin-left: -2rem;
       pointer-events: none;
       z-index: 1;
